Fixed overflow

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -46,6 +46,7 @@ html, body {
     1px -1px 0 #000,
     -1px 1px 0 #000,
      1px 1px 0 #000;
+  overflow: hidden;
 
 }
 
